--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -42,6 +42,12 @@
 	    		<artifactId>mariadb-java-client</artifactId>
 	    		<version>2.2.2</version><!--$NO-MVN-MAN-VER$-->
 		</dependency>
+		
+		<dependency>
+			<groupId>org.modelmapper.extensions</groupId>
+			<artifactId>modelmapper-jackson</artifactId>
+			<version>1.1.0</version>
+		</dependency>
 
 	</dependencies>
 
